<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.p10_notifications.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/content_hint" />

    <Button
        android:id="@+id/buttonNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notify"
        android:text="@string/notify" />

    <Button
        android:id="@+id/buttonNotifyStack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notify"
        android:text="@string/notify_stack" />

    <Button
        android:id="@+id/notifyProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="notify"
        android:text="@string/notify_progress" />

    <Button
        android:id="@+id/buttonClearNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clearNotifications"
        android:text="@string/clear_notifications" />

</LinearLayout>
